--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/bearer": "^1.4.2",
+    "@elysiajs/cors": "^1.4.0",
+    "@elysiajs/jwt": "^1.4.0",
+    "bcrypt": "^6.0.0",
+    "elysia": "latest",
+    "pg": "^8.16.3",
+    "zod": "^4.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/pg": "^8.16.0",
     "bun-types": "latest"
   },
   "module": "src/index.js"
